Mark checkbox setting fields as required

--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -7,7 +7,8 @@
     name: 'targetTypes',
     options: types,
     showAllOption: true,
-    values: settings.targetTypes
+    values: settings.targetTypes,
+    required: true
 })}}
 
 {{ forms.checkboxSelectField({
@@ -17,5 +18,6 @@
     name: 'targetFields',
     options: fields,
     showAllOption: true,
-    values: settings.targetFields
+    values: settings.targetFields,
+    required: true
 })}}
